--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
         
         <div class="Topbar">
-            <p><a href="introduction.html">Introduction of AI</a></p>
+            <p><a href="Introduction.html">Introduction of AI</a></p>
             <p><a href="Benefits.html">Benefits of AI</a></p>
             <p><a href="Drawback.html">Drawbacks of AI</a></p>
             
