--- a/Drawback.html
+++ b/Drawback.html
@@ -32,9 +32,9 @@
     <p> <a class="LinkeIn" href="https://www.linkedin.com/in/andreas-meier-455bba1aa"> CLICK here to access Andras's LinkeIn page.</a></p>
     <p> <a class="LinkeIn"  href="https://github.com/meierenergized"> CLICK here to access Andras's GitHUb page.</a></p>
     <div class="NextPage"> 
-        <p><a href="introduction.html">Introduction of AI</a></p>
+        <p><a href="Introduction.html">Introduction of AI</a></p>
         <p><a href="Benefits.html">Benefits of AI</a></p>
-        <p><a href="homePage.html">HomePage</a></p>
+        <p><a href="index.html">HomePage</a></p>
     </div>
 
 
