--- a/Drawback.html
+++ b/Drawback.html
@@ -34,7 +34,7 @@
     <div class="NextPage"> 
         <p><a href="Introduction.html">Introduction of AI</a></p>
         <p><a href="Benefits.html">Benefits of AI</a></p>
-        <p><a href="index.html">HomePage</a></p>
+        <p><a href="HomePage.html">HomePage</a></p>
     </div>
 
 
