--- a/Benefits.html
+++ b/Benefits.html
@@ -70,7 +70,7 @@
         <div class="NextPage">
             <p><a href="Introduction.html">Introduction of AI</a></p>
             <p><a href="Drawback.html">Drawbacks of AI</a></p>
-            <p><a href="HomePage.html">HomePage</a></p>
+            <p><a href="index.html">HomePage</a></p>
         </div>
         
     
