--- a/Introduction.html
+++ b/Introduction.html
@@ -18,7 +18,7 @@
     <div class="NextPage">
         <p><a href="Benefits.html">Benefits of AI</a></p>
         <p><a href="Drawback.html">Drawbacks of AI</a></p>
-        <p><a href="HomePage.html">HomePage</a></p>
+        <p><a href="index.html">HomePage</a></p>
     </div>
 </div>
     
